crates/rusvelte_parser/tests/block/snapshots/snapshot__block__success@each-block-array-pattern.svelte.snap
---
source: crates/rusvelte_parser/tests/block/mod.rs
expression: root
input_file: crates/rusvelte_parser/tests/block/inputs/each-block-array-pattern.svelte
snapshot_kind: text
---
{
  "type": "Root",
  "css": null,
  "start": 0,
  "end": 62,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "EachBlock",
        "start": 0,
        "end": 62,
        "expression": {
          "type": "Identifier",
          "start": 7,
          "end": 12,
          "name": "items"
        },
        "context": {
          "type": "ArrayPattern",
          "start": 16,
          "end": 27,
          "elements": [
            {
              "type": "Identifier",
              "start": 17,
              "end": 21,
              "name": "name",
              "typeAnnotation": null,
              "optional": false
            },
            {
              "type": "Identifier",
              "start": 23,
              "end": 26,
              "name": "qty",
              "typeAnnotation": null,
              "optional": false
            }
          ],
          "typeAnnotation": null,
          "optional": false
        },
        "body": {
          "type": "Fragment",
          "nodes": [
            {
              "type": "Text",
              "start": 28,
              "end": 31,
              "raw": "\n  ",
              "data": "\n  "
            },
            {
              "type": "RegularElement",
              "start": 31,
              "end": 54,
              "name": "li",
              "attributes": [],
              "fragment": {
                "type": "Fragment",
                "nodes": [
                  {
                    "type": "ExpressionTag",
                    "start": 35,
                    "end": 41,
                    "expression": {
                      "type": "Identifier",
                      "start": 36,
                      "end": 40,
                      "name": "name"
                    }
                  },
                  {
                    "type": "Text",
                    "start": 41,
                    "end": 44,
                    "raw": " x ",
                    "data": " x "
                  },
                  {
                    "type": "ExpressionTag",
                    "start": 44,
                    "end": 49,
                    "expression": {
                      "type": "Identifier",
                      "start": 45,
                      "end": 48,
                      "name": "qty"
                    }
                  }
                ]
              }
            },
            {
              "type": "Text",
              "start": 54,
              "end": 55,
              "raw": "\n",
              "data": "\n"
            }
          ]
        },
        "fallback": null,
        "index": null,
        "key": null
      }
    ]
  },
  "module": null,
  "instance": null,
  "options": null
}
