crates/rusvelte_parser/tests/block/snapshots/snapshot__block__success@snippet-block.svelte.snap
---
source: crates/rusvelte_parser/tests/block/mod.rs
expression: root
input_file: crates/rusvelte_parser/tests/block/inputs/snippet-block.svelte
snapshot_kind: text
---
{
  "type": "Root",
  "css": null,
  "start": 0,
  "end": 36,
  "fragment": {
    "type": "Fragment",
    "nodes": [
      {
        "type": "SnippetBlock",
        "start": 0,
        "end": 36,
        "expression": {
          "type": "Identifier",
          "start": 10,
          "end": 15,
          "name": "hello"
        },
        "parameters": [
          {
            "type": "Identifier",
            "start": 16,
            "end": 17,
            "name": "a",
            "typeAnnotation": null,
            "optional": false
          },
          {
            "type": "Identifier",
            "start": 19,
            "end": 20,
            "name": "b",
            "typeAnnotation": null,
            "optional": false
          },
          {
            "type": "Identifier",
            "start": 22,
            "end": 23,
            "name": "c",
            "typeAnnotation": null,
            "optional": false
          }
        ],
        "body": {
          "type": "Fragment",
          "nodes": [
            {
              "type": "Text",
              "start": 25,
              "end": 26,
              "raw": "1",
              "data": "1"
            }
          ]
        }
      }
    ]
  },
  "module": null,
  "instance": null,
  "options": null
}
